appId: xyz.lilsus.blip.e2e
---
- assertVisible:
    id: "nwc_wallet_screen"
- tapOn:
    id: "nwc_wallet_uri_field"
- setClipboard: ${URI}
- pasteText
- extendedWaitUntil:
    visible: "Wallet public key"
    timeout: 5000
- tapOn:
    text: "Add Wallet"
    index: 1
    retryTapIfNoChange: true
- assertVisible:
    id: "payment_screen"
