appId: xyz.lilsus.blip.e2e
---
- launchApp:
    clearState: true
    clearKeychain: true
- runFlow:
    file: "../common/select_wallet_type.yaml"
    env:
        ID: onboarding_wallet_choice_blink_option
- assertVisible:
    id: "onboarding_agreement_checkbox"
- tapOn:
    id: "onboarding_agreement_checkbox"
- assertVisible:
    id: "onboarding_agreement_continue_button"
- tapOn:
    id: "onboarding_agreement_continue_button"
- assertVisible:
    id: "onboarding_add_blink_wallet_continue_button"
- tapOn:
    id: "onboarding_add_blink_wallet_continue_button"
- runFlow:
    file: "../common/add_blink.yaml"
    env:
        NAME: "Real Blink Wallet (valid)"
        KEY: ${BLINK_KEY_ALL}
- assertVisible:
    id: "payment_screen"








